# nats-aws-events

./: Cargo.toml  docker-compose.yaml  readme.md  run_all.sh
nats-data/jetstream/jetstream/$G/streams/my_bridge/: meta.inf  meta.sum
nats-data/jetstream/jetstream/$G/streams/my_bridge/msgs/: index.db
nats-data/jetstream/jetstream/$G/streams/my_bridge/obs/lambda_trigger/: meta.inf  meta.sum
nats-data/jetstream/jetstream/$G/streams/status_bridge/: meta.inf  meta.sum
nats-data/jetstream/jetstream/$G/streams/status_bridge/msgs/: index.db
nats-data/jetstream/jetstream/$G/streams/status_bridge/obs/lambda_trigger/: meta.inf  meta.sum
nats_consumer/: Cargo.toml
nats_consumer/src/: cron.rs  lambda_trigger.rs  main.rs  status_checker.rs  utils.rs
nats_web/: Cargo.toml
nats_web/src/: handlers.rs  main.rs  models.rs
nats_web/templates/: credentials.html  index.html  scheduler.html
