[package]
name = "nats_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.42.0"
tokio = { version = "1", features = ["full"] }
base64ct = "<1.8.0" 
serde_json = "1.0.141"
rand = "0.9.2"
aws-sdk-lambda = "1.88.0"
aws-config = "1.8.2"
futures = "0.3.31"
anyhow = "1.0"
aws-sdk-cloudwatchlogs = "1.94.0"