[package]
name = "nats_web"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
actix-web = "4.11.0"
sled = "0.34.7"
askama = "0.14.0"
dirs = "6.0.0"
aws-credential-types = "1.2.4"
aws-types = "1.3.7"
aws-config = "1.8.2"
aws-sdk-lambda = "1.88.0"
filters = "0.4.0"
croner = "3.0.0"
chrono = "0.4.41"